# FAST_LIO

./: CMakeLists.txt  package.xml
config/: mid360.yaml
include/: common_lib.cpp  common_lib.h  fastlio.cpp  fastlio.h  use-ikfom.cpp  use-ikfom.h  use-ikfom.hpp
include/IKFoM_toolkit/mtk/: build_manifold.hpp
launch/: mapping.launch.py
rviz/: fastlio.rviz
src/: IMU_Processing.cpp  IMU_Processing.h  IMU_Processing.hpp  NodeCloudCompare.cpp  NodeCloudCompare.h  NodeCloudDynamicFilter.cpp  NodeCloudDynamicFilter.h  NodeCloudProcess.cpp  NodeCloudProcess.h  NodeCloudSegment.cpp  NodeCloudSegment.h  NodeERASOR.cpp  NodeERASOR.h  NodeFilterDynamic.cpp  NodeFilterDynamic.h  NodeOctomap.cpp  NodeOctomap.h  NodePCA.cpp  NodePCA.h  NodePreProcess.cpp  NodePreProcess.h  NodePublishMap.cpp  NodePublishMap.h  NodeReconstruction.cpp  NodeReconstruction.h  NodeSegment.cpp  NodeSegment.h  Run.cpp  fastlio.cpp  laserMapping.cpp  laserMapping.hpp  pointsCorrect.cpp  preprocess.cpp  preprocess.h  segment.cpp  segment.h
src/ERASOR/: ERASOR.cpp  ERASOR.h
src/segment/: pointsCorrect.cpp  pointsCorrect.h  segment.cpp  segment.h
